--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 
 #app {
     padding: 1.5rem;
-    margin-top: 52px;
+    margin-bottom: 52px;
     min-height: calc(100vh - 52px);
     min-width: 100vw;
 }
@@ -17,7 +17,7 @@ a,
 
 @media (hover: hover) {
     a:hover {
-        background-color: hsla(160, 100%, 37%, 0.2);
+        background-color: hsla(36, 100%, 59%, 0.2);
     }
 }
 
